--- a/css/home.css
+++ b/css/home.css
@@ -319,7 +319,7 @@
     justify-content: center;
   }
   .play_cont img, .play_cont_02 img, .play_cont_02 #wideIMG {
-    width: 80%;
+    width: 93%;
   }
 }
 
